--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera!You r amazing</h1>
+<h1>Hello Coursera!yor are amazing</h1>
 </body>
 </html>
